--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,9 +1,9 @@
-<header class="header ">
-  <div class="header-wrapper ">
+<header class="header container">
+  <div class="header-wrapper">
     <nav class="header-nav">
       <ul class="header-list">
         <li class="header-item">
-          <a class="header-link-logo " href="./index.html">
+          <a class="header-link-logo" href="./index.html">
             <svg class="svg-logo" width="24" height="24">
               <use href="./images/sprite.svg#icon-logo"></use>
             </svg>
@@ -11,10 +11,9 @@
           </a>
         </li>
         <li class="header-item">
-          <a class="header-link-home menu-link  " href="./index.html">HOME</a
-          >
+          <a class="header-link-home menu-link" href="./index.html">HOME</a>
         </li>
-        <li class="header-item  ">
+        <li class="header-item">
           <a class="header-link menu-link" href="./shopping_list.html">
             <span>SHOPPING LIST</span>
             <svg class="svg" width="20" height="20">
@@ -25,12 +24,12 @@
       </ul>
     </nav>
     <!-- buttons -->
-    <div class="container-button ">
+    <div class="container-button">
       <label class="switch">
         <input id="theme-switch" type="checkbox" />
         <span class="slider round"></span>
       </label>
-      <button class="button-burger  js-open-menu">
+      <button class="button-burger js-open-menu">
         <svg class="svg" width="28" height="28">
           <use href="./images/sprite.svg#icon-burgermenu"></use>
         </svg>
@@ -40,35 +39,47 @@
           <use href="./images/sprite.svg#icon-closebtn"></use>
         </svg>
       </button>
-      <button  class="button-autor "  type="button">
+      <button class="button-autor" type="button">
         Sign up
         <svg class="svg-button" width="20" height="20">
           <use href="./images/sprite.svg#icon-arrow-narrow-right"></use>
         </svg>
       </button>
     </div>
+  </div>
 </header>
-    <!-- mobail-menu -->
+<!-- mobail-menu -->
 <div class="mobile-menu js-menu-container">
-      <ul class="mobile-nav-list">
-        <li class="mobile-nav-item">
-          <a class="header-link-home menu-link-mobail mobile-color  header-link-home-modal"  href="./index.html">HOME</a>
-        </li>
-        <li class="mobile-nav-item">
-          <a class="header-link-shoppingcart  menu-link-mobail  " href="./shopping_list.html">
-            <span>SHOPPING LIST</span>
-            <svg class="svg-mobail " width="20" height="20">
-              <use href="./images/sprite.svg#icon-shoppingcart"></use>
-            </svg>
-          </a>
-        </li>
-       </ul>
-       <button class="btn-autor" type="button">Log out 
+  <ul class="mobile-nav-list">
+    <li class="mobile-nav-item">
+      <a
+        class="header-link-home menu-link-mobail mobile-color header-link-home-modal"
+        href="./index.html"
+        >HOME</a
+      >
+    </li>
+    <li class="mobile-nav-item">
+      <a
+        class="header-link-shoppingcart menu-link-mobail"
+        href="./shopping_list.html"
+      >
+        <span>SHOPPING LIST</span>
+        <svg class="svg-mobail" width="20" height="20">
+          <use href="./images/sprite.svg#icon-shoppingcart"></use>
+        </svg>
+      </a>
+      <button class="btn-autor" type="button">
+        Log out
         <svg class="svg-btn-autor" width="20" height="20">
           <use href="./images/sprite.svg#icon-arrow-narrow-right"></use>
         </svg>
       </button>
-      <img class="img mobile-nav-item-img" src="./images/shoplist/books.png" alt="book" />
+    </li>
+  </ul>
 
-  </div>
-
+  <img
+    class="img mobile-nav-item-img"
+    src="./images/shoplist/books.png"
+    alt="book"
+  />
+</div>
