--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
         <li class="header-item">
           <a class="header-link menu-link" href="./shopping_list.html">
             <span> SHOPPING LIST</span>
-            <svg class="svg" width="20" height="20">
+            <svg class="svg shopping-icon" width="20" height="20">
               <use href="./images/sprite.svg#icon-shoppingcart"></use>
             </svg>
           </a>
@@ -54,7 +54,7 @@
         <li class="mobile-nav-item">
           <a class="header-link-shoppingcart" href="./shopping_list.html">
             <span>SHOPPING LIST</span>
-            <svg class="svg-mobail" width="20" height="20">
+            <svg class="svg-mobail shopping-icon" width="20" height="20">
               <use href="./images/sprite.svg#icon-shoppingcart"></use>
             </svg>
           </a>
