--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,3 @@
- 
 
  @media screen and (min-width: 320px) {
     .header {
@@ -63,7 +62,7 @@ height: 72px;
     }
 }
 
-.header-link {
+a.header-link {
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 500;
@@ -88,16 +87,17 @@ height: 72px;
 }
 
 .header-link-home {
-    display: flex;
+    font-family: 'DM Sans';
+    display: flex ;
     justify-content: center;
-    border: none;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: -0.04em;
-    text-transform: uppercase;
-
+    /* border: none ; */
+    font-style: normal ;
+    font-weight: 700 ;
+    font-size: 14px ;
+    line-height: 18px ;
+    letter-spacing: -0.04em ;
+    text-transform: uppercase ;
+    margin-right: 24px;
 }
 
 
@@ -140,7 +140,8 @@ height: 72px;
     position: relative;
     display: inline-flex;
     border-radius: 36px;
-   
+   background-color: transparent;
+   padding: 8px 16px;
 }
 
 .menu-link.current {
@@ -149,6 +150,7 @@ height: 72px;
     color: #111111;
    
 }
+
 
 
 
@@ -257,9 +259,6 @@ input:checked+.slider:before {
 
 
 /* **************************modal *************************menu */
-
-
-
 @media only screen and (min-width:320px) and (max-width: 767px) {
     .header {
         position: fixed;
@@ -275,6 +274,7 @@ input:checked+.slider:before {
         position: static;
     }
 }
+
 @media screen and (min-width: 320px) {
     .mobile-menu {
         display: flex;
@@ -287,7 +287,6 @@ input:checked+.slider:before {
         display: none;
     }
 }
-
 .mobile-menu {
     display: block;
     overflow: hidden;
@@ -306,7 +305,11 @@ input:checked+.slider:before {
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+@media screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+}
 .is-open {
     pointer-events: initial;
     opacity: 1;
