--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,4 @@
+@import url('./loader.css');
 @import url('./base.css');
 @import url('./all_categories.css');
 @import url('./book-card.css');
@@ -7,3 +8,4 @@
 @import url('./support_Ukraine.css');
 @import url('./dark-theme.css');
 @import url('./scroll-up.css');
+
