--- a/src/partials/loader.html
+++ b/src/partials/loader.html
@@ -1,3 +1,3 @@
 <div class="loader-container"><span id="loader" class="loader"></span></div>
 
-<span id="loader-pop-up" class="loader-pop-up is-hidden"></span>
+<!-- <span id="loader-pop-up" class="loader-pop-up is-hidden"></span> -->
