--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -1,324 +1,326 @@
 @media screen and (max-width: 768px) {
-    .shopping-list-section {
-        padding-top: 100px;
-    }
+  .shopping-list-section {
+    padding-top: 100px;
+  }
 }
 
 @media screen and (min-width: 768px) {
-    .shopping-list-section {
-        height: 935px;
-    }
-}
-
-@media screen and (min-width: 1440px) {
-    .shopping-section {
-        display: flex;
-        gap: 40px;
-    }
-}
-
-.shopping-support {
-    display: none;
-}
-
-@media screen and (min-width: 1440px) {
-    .shopping-support {
-        display: block;
-    }
-}
-
-.shopping-part {
-    font-weight: 400;
-    letter-spacing: -0.04em;
-    color: var(--black-color);
-}
-
-.shopping-empty {
-    width: 244px;
-    margin: 120px auto 302px auto;
-    text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-    .shopping-empty {
-        width: 349px;
-        margin: 140px auto 394px auto;
-    }
-}
-
-@media screen and (min-width: 1440px) {
-    .shopping-empty {
-        margin-left: 355px;
-        margin-bottom: 157px;
-    }
-}
-
-.shopping-text {
-    margin-bottom: 14px;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.02em;
-    color: var(--shopping-list-text-color);
-}
-
-@media screen and (min-width: 768px) {
-    .shopping-text {
-        margin-bottom: 20px;
-        font-size: 18px;
-        line-height: 1.34;
-    }
-}
-
-.shopping-empty-book {
-    margin: 0 auto;
-}
-
-.shopping-book-card {
-    position: relative;
-    width: 295px;
-    margin: 0 auto 20px 0;
-    display: flex;
-    border: 2px solid rgba(79, 46, 232, 0.4);
-    border-radius: 16px;
-}
-
-@media screen and (min-width: 375px) {
-    .shopping-book-card {
-        width: 335px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .shopping-book-card {
-        width: 704px;
+  .shopping-list-section {
+    height: 935px;
   }
 }
 
 @media screen and (min-width: 1440px) {
-    .shopping-book-card {
-        width: 996px;
-    }
+  .shopping-section {
+    display: flex;
+    gap: 40px;
+  }
 }
 
-.shopping-card-img {
-    margin: 14px;
-    border-radius: 8px;
-    background-color: rgb(180, 79, 150);
+.shopping-support {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .shopping-support {
+    display: block;
+  }
+}
+
+.shopping-part {
+  font-weight: 400;
+  letter-spacing: -0.04em;
+  color: var(--black-color);
+}
+
+.shopping-empty {
+  width: 244px;
+  margin: 120px auto 302px auto;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
-    .shopping-card-img {
-        margin: 24px;
-        width: 116px;
-        height: 165px;
-    }
+  .shopping-empty {
+    width: 349px;
+    margin: 140px auto 394px auto;
+  }
 }
 
-.shopping-card-info {
-    padding: 14px 14px 14px 0;
+@media screen and (min-width: 1440px) {
+  .shopping-empty {
+    margin-left: 355px;
+    margin-bottom: 157px;
+  }
+}
+
+.shopping-text {
+  margin-bottom: 14px;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  color: var(--shopping-list-text-color);
 }
 
 @media screen and (min-width: 768px) {
-    .shopping-card-info {
-        padding: 24px 24px 24px 0;
-    }
+  .shopping-text {
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: 1.34;
+  }
 }
 
-.shopping-title-card {
-    width: 124px;
-    margin-bottom: 4px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.12;
-    white-space: nowrap;
+.shopping-empty-book {
+  margin: 0 auto;
+}
+
+.shopping-book-card {
+  position: relative;
+  width: 295px;
+  margin: 0 auto 20px 0;
+  display: flex;
+  border: 2px solid rgba(79, 46, 232, 0.4);
+  border-radius: 16px;
 }
 
 @media screen and (min-width: 375px) {
-    .shopping-title-card {  
-        width: 144px;
+  .shopping-book-card {
+    width: 335px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .shopping-book-card {
+    width: 704px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .shopping-book-card {
+    width: 996px;
+  }
+}
+
+.shopping-card-img {
+  margin: 14px;
+  border-radius: 8px;
+  background-color: rgb(180, 79, 150);
+}
+
+@media screen and (min-width: 768px) {
+  .shopping-card-img {
+    margin: 24px;
+    width: 116px;
+    height: 165px;
+  }
+}
+
+.shopping-card-info {
+  padding: 14px 14px 14px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .shopping-card-info {
+    padding: 24px 24px 24px 0;
+  }
+}
+
+.shopping-title-card {
+  width: 124px;
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.12;
+  white-space: nowrap;
+}
+
+@media screen and (min-width: 375px) {
+  .shopping-title-card {
+    width: 144px;
   }
 }
 
 @media screen and (max-width: 768px) {
-    .shopping-title-card {
+  .shopping-title-card {
     text-transform: uppercase;
     text-overflow: ellipsis;
     overflow: hidden;
-    }
+  }
 }
 .shopping-category-card {
-    width: 165px;
-    margin-bottom: 8px;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    color: #B4AFAF;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  width: 165px;
+  margin-bottom: 8px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: #b4afaf;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (min-width: 768px) {
-    .shopping-category-card {
-        margin-bottom: 14px;
-    }
+  .shopping-category-card {
+    margin-bottom: 14px;
+  }
 }
 
 .shopping-desc-card {
-    margin-bottom: 25px;
-    width: 150px;
-    height: 3.6em;
-    font-size: 14px;
-    line-height: 1.29;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
+  margin-bottom: 25px;
+  width: 150px;
+  height: 3.6em;
+  font-size: 14px;
+  line-height: 1.29;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 @media screen and (min-width: 768px) {
-    .shopping-desc-card {
-        width: 193px;
-    }
+  .shopping-desc-card {
+    width: 193px;
+  }
 }
 
 @media screen and (min-width: 768px) {
-    .shopping-desc-card {
-        width: 508px;
-        margin-bottom: 31px;
-    }
+  .shopping-desc-card {
+    width: 508px;
+    margin-bottom: 31px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
-    .shopping-desc-card {
-        width: 804px;
-    }
+  .shopping-desc-card {
+    width: 804px;
+  }
 }
 
 .shopping-bottom-card {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .shopping-author-card {
-    font-size: 10px;
-    font-style: italic;
-    line-height: 1.17;
-    color: #B4AFAF;
+  font-size: 10px;
+  font-style: italic;
+  line-height: 1.17;
+  color: #b4afaf;
 }
 
 @media screen and (min-width: 375px) {
-    .shopping-author-card {
-        font-size: 12px;
+  .shopping-author-card {
+    font-size: 12px;
   }
 }
 
 .shopping-site {
-    width: 80px;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    filter: hue-rotate(180deg) saturate(0%);
+  width: 80px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  filter: hue-rotate(180deg) saturate(0%);
 }
 
 @media screen and (min-width: 768px) {
-    .shopping-site {
-        width: 149px;
+  .shopping-site {
+    width: 149px;
   }
 }
 
 .shopping-close-btn {
-    position: absolute;
-    top: 14px;
-    right: 14px;
-    background-color: var(--categories-links-active-color);
-    border-radius: 50%;
-    width: 28px;
-    height: 28px;
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  background-color: var(--categories-links-active-color);
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
 }
 
 @media screen and (min-width: 768px) {
-    .shopping-close-btn {
-        top: 24px;
-        right: 24px;
-        width: 34px;
-        height: 34px;
-    }
+  .shopping-close-btn {
+    top: 24px;
+    right: 24px;
+    width: 34px;
+    height: 34px;
+  }
 }
 
 .shopping-icon {
-    fill: var(--white-color);
+  /* fill: var(--white-color); */
+  fill: var(--black-color);
 }
 
 .tui-pagination.is-hidden {
-    display: none;
+  display: none;
 }
 
 #pagination .tui-page-btn {
-    height: 33px;
-    width: 33px;
-    margin-left: 2px;
-    margin-right: 2px;
-    border-radius: 50%;
-    border: 1px solid #111111;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.22;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+  height: 33px;
+  width: 33px;
+  margin-left: 2px;
+  margin-right: 2px;
+  border-radius: 50%;
+  border: 1px solid #111111;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.22;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 375px) {
-    #pagination .tui-page-btn {
-        height: 38px;
-        width: 38px;
-    }
+  #pagination .tui-page-btn {
+    height: 38px;
+    width: 38px;
+  }
 }
 
 @media screen and (min-width: 760px) {
-    #pagination .tui-page-btn {
-        height: 44px;
-        width: 44px;
-        margin-left: 4px;
-        margin-right: 4px;
-        border-radius: 50%;
-        border: 1px solid #111111;
-    }   
+  #pagination .tui-page-btn {
+    height: 44px;
+    width: 44px;
+    margin-left: 4px;
+    margin-right: 4px;
+    border-radius: 50%;
+    border: 1px solid #111111;
+  }
 }
 
 #pagination .tui-first,
 #pagination .tui-prev,
 #pagination .tui-is-selected {
-    background-color: #111111;
+  background-color: #111111;
 }
 
 #pagination .tui-prev {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 @media screen and (min-width: 760px) {
-    #pagination .tui-prev {
-        margin-right: 20px;
-    }
+  #pagination .tui-prev {
+    margin-right: 20px;
+  }
 }
 
-#pagination .tui-is-selected {}
+#pagination .tui-is-selected {
+}
 
 #pagination .tui-next {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 @media screen and (min-width: 760px) {
-    #pagination .tui-next {
-        margin-left: 20px;
-    }
+  #pagination .tui-next {
+    margin-left: 20px;
+  }
 }
 
 #pagination .tui-next,
 #pagination .tui-last {
-    background-color: #EAC645;
-    color: #000000;
+  background-color: #eac645;
+  color: #000000;
 }
