--- a/src/partials/support_Ukraine.html
+++ b/src/partials/support_Ukraine.html
@@ -19,7 +19,7 @@
           <svg class="swiper-button-next-icon-down" id="scrolldown" width="22" height="22">
             <use href="./images/sprite.svg#icon-arrowscrolldown"></use>
           </svg>
-          <svg class="swiper-button-next-icon-up is-hidden" id="scrollup" width="22" height="22">
+          <svg class="swiper-button-next-icon-up is-hidden-support" id="scrollup" width="22" height="22">
             <use href="./images/sprite.svg#icon-arrowscrollupsupport"></use>
           </svg>
         </button>
