--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -36,6 +36,12 @@
   color: var(--black-color);
 }
 
+@media only screen and (max-width: 768px) {
+  .add-to-list-button {
+    font-size: 14px;
+  }
+}
+
 .add-to-list-button:hover,
 .add-to-list-button:focus {
   color: var(--white-color);
@@ -69,11 +75,13 @@
   padding: 20px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   /* max-width: 800px; */
-  width: 335px;
+  max-width: 335px;
+  width: 100%;
   height: 762px;
   background-attachment: fixed;
   position: absolute;
 }
+
 @media only screen and (max-width: 767px) {
   .modal-content {
     overflow-y: auto;
