--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -41,7 +41,11 @@
     font-size: 14px;
   }
 }
-
+@media only screen and (max-width: 375px) {
+  .add-to-list-button {
+    font-size: 10px;
+  }
+}
 .add-to-list-button:hover,
 .add-to-list-button:focus {
   color: var(--white-color);
