--- a/src/css/support_Ukraine.css
+++ b/src/css/support_Ukraine.css
@@ -108,7 +108,7 @@
 /* MOBILE */
 @media screen and (min-width: 320px) and (max-width: 374px){
 .support-container {
-  max-width: 320px;
+  width: 320px;
   height: 490px;
   padding-top: 24px;
   padding-bottom: 20px;
