--- a/src/partials/support_Ukraine.html
+++ b/src/partials/support_Ukraine.html
@@ -8,7 +8,7 @@
         </div>
    
         <div class="swiper-div" id="swiper-div">
-          <div class="forLogoDiv"></div>
+          <ul class="forLogoDiv"></ul>
         </div>
         <button
           id="swiper-button"
