--- a/src/css/support_Ukraine.css
+++ b/src/css/support_Ukraine.css
@@ -1,18 +1,33 @@
 .support-container {
-    width: 356px;
-    height: 490px;
+    max-width: 335px;
+    height: 352px;
     padding-top: 24px;
     padding-bottom: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 30px;
     background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
     box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
     border-radius: 16px;
+    margin-bottom: 40px;
 }
+
 .wrapper {
   display: flex;
   gap: 12px;
   margin-bottom: 40px;
+}
+@media only screen and (min-width: 356px){
+  .support-container {
+    max-width: 335px;
+    height: 352px;
+    background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
+    box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
+    border-radius: 16px;
+    margin-bottom: 40px;
+    padding-top: 24px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
 .support-title {
   width: 205px;
@@ -24,30 +39,35 @@
   letter-spacing: -0.04em;
   color: #ffffff;
 }
-
 .swiper-div {
-  height: 292px;
-  overflow: hidden;
-  margin-bottom: 32px;
+  height: 180px;
+  margin-bottom: 24px;
 }
-
+.swiper-button-next {
+  width: 32px;
+  height: 32px;
+}
+.swiper-div {
+  height: 180px;
+  margin-bottom: 24px;
+  overflow: hidden;
+  margin-bottom: 16px;
+}
 .forLogoDiv {
-  display: flex;
   flex-direction: column;
   gap: 20px;
-  transition: transform 0.7s cubic-bezier(0.08, 0.82, 0.15, 0.94);
+  display: flex;
+  overflow: hidden;
+  transition: transform 0.7s cubic-bezier(0.08, 0.82, 0.15, 0.94); 
 }
-
 .logo__item {
   display: flex;
   align-items: center;
   gap: 14px;
 }
-
 .logo__item > img {
   object-fit: cover;
 }
-
 .fundNumber {
   width: 14px;
   font-family: 'DM Sans';
@@ -59,18 +79,12 @@
   letter-spacing: -0.04em;
   color: #ffffff;
 }
-
-.logo__item {
-  height: 32px;
-}
-
 .buttonSlider {
   width: 32px;
   height: 32px;
   background: #ffffff;
   transform: rotate(90deg);
 }
-
 .swiper-button-next {
   display: flex;
   align-items: center;
@@ -82,21 +96,21 @@
   cursor: pointer;
   transition: background-color 0.3s;
 }
-
+/* .swiper-button-next {
+  width: 38px;
+  height: 38px;
+} */
 .my-class:hover .swiper-button-next,
 .my-class:focus .swiper-button-next {
   background-color: rgb(236, 221, 184);
 }
-
 .fund-item p {
   font-size: 14px;
 }
-
 .fund-item p,
 .fund-item .logo__img {
   transition: filter 0.3s;
 }
-
 .fund-item:hover p,
 .fund-item:focus p,
 .fund-item:hover .logo__img,
@@ -105,84 +119,43 @@
 }
 
 
-/* MOBILE */
-@media screen and (min-width: 320px) and (max-width: 374px){
-.support-container {
-  width: 320px;
-  height: 490px;
-  padding-top: 24px;
-  padding-bottom: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
-  background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
-  box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
-  border-radius: 16px;
-  margin-bottom: 40px;
-}}
-@media screen and (min-width: 375px) and (max-width: 767px) {
-    .support-container {
-      width: 335px;
-      height: 352px;
-      padding-top: 24px;
-      padding-bottom: 20px;
-      padding-left: 40px;
-      padding-right: 20px;
-      background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
-      box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
-      border-radius: 16px;
-      margin-bottom: 40px;
-    }
-
-.support-title {
-  width: 205px;
-  font-size: 28px;
-}
-
-.swiper-div {
-  height: 180px;
-  margin-bottom: 24px;
-}
-
-.buttonSlider {
-  width: 28px;
-  height: 28px;
-}
-
-.swiper-button-next {
-  width: 32px;
-  height: 32px;
-}
-
-
-}
 /* TABLET */
-@media only screen and (min-width: 768px) and (max-width: 1198px) {
+@media only screen and (min-width: 768px) {
   .support-container {
-    width: 335px;
     height: 472px;
-      background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
-      box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
-      border-radius: 16px;
-  }
-
+    padding-bottom: 14px;
+    margin-bottom: 0;
+}
 .support-title {
   width: 205px;
   font-size: 28px;
 }
-
 .swiper-div {
   height: 292px;
   margin-bottom: 32px;
 }
-
 .buttonSlider {
   width: 32px;
   height: 32px;
 }
-
 .swiper-button-next {
   width: 38px;
   height: 38px;
 }
-
+.forLogoDiv {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  transition: transform 0.7s cubic-bezier(0.08, 0.82, 0.15, 0.94);
+  overflow: visible;
 }
+}
+
+@media only screen and (min-width: 1440px) {
+  .support-container {
+      width: 356px;
+      height: 490px;
+      padding-bottom: 24px;
+    }
+} 
