--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,4 +8,4 @@
 @import url('./support_Ukraine.css');
 @import url('./dark-theme.css');
 @import url('./scroll-up.css');
-
+@import url('./autorization.css');
