--- a/src/partials/autorazation.html
+++ b/src/partials/autorazation.html
@@ -66,19 +66,19 @@
       <div class="registraion-wrapper slide-in-elliptic-right-fwd">
         <form class="registration-form">
           <input
-            class="registration-form__input"
+            class="registration-form__input dark-auth"
             type="text"
             placeholder="NAME"
             id="name-reg"
           />
           <input
-            class="registration-form__input"
+            class="registration-form__input dark-auth"
             type="email"
             placeholder="EMAIL"
             id="email-reg"
           />
           <input
-            class="registration-form__input"
+            class="registration-form__input dark-auth"
             type="password"
             placeholder="PASSWORD"
             id="password-reg"
@@ -93,14 +93,14 @@
       <div class="login-form-wrapper slide-in-elliptic-left-fwd invisible">
         <form class="login-form">
           <input
-            class="login-form__input"
+            class="login-form__input dark-auth"
             type="email"
             placeholder="EMAIL"
             data-login-email
             id="email-user"
           />
           <input
-            class="login-form__input"
+            class="login-form__input dark-auth"
             type="password"
             placeholder="PASSWORD"
             data-login-pass
@@ -113,10 +113,10 @@
     </div>
 
     <div class="links-container">
-      <a id="registration-link" class="registration-link active" href="#"
+      <a id="registration-link" class="registration-link active dark-link" href="#"
         >SIGN UP</a
       >
-      <a id="login-link" class="login-link" href="#">SIGN IN</a>
+      <a id="login-link" class="login-link dark-link" href="#">SIGN IN</a>
     </div>
   </div>
 </div>
